# python

./: README.md  main.py  pyproject.toml
src/python_starter/: __init__.py  calculator.py
tests/: test_calculator.py  test_main.py
