[tool.poetry]
name = "python_starter"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
mypy = "^1.1"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
ruff = "^0.1.1"

[tool.ruff]
select = ["ALL"]
ignore = ["D211", "D213", "T201"]

[tool.ruff.per-file-ignores]
"tests/**" = ["D", "S101", "S105", "INP001", "ANN201"]

[tool.poetry.scripts]
calculate = "python_starter.calculator:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
